Wrote out the necessary HTML code

--- a/index.html
+++ b/index.html
@@ -3,13 +3,122 @@
 
 	<head>
 		<meta charset="utf-8">
-		<title>Insert Title</title>
+		<title>ComIcon</title>
 		<link href="css/reset.css" rel="stylesheet" type="text/css">
 		<link href="css/main.css" rel="stylesheet" type="text/css">
 	</head>
 
 	<body>
-		<!--Code goes here -->
+		<!-- Site Container -->
+		<div id="container">
+			<h1 class="hidden">ComIcon</h1>
+
+			<!-- Header -->
+			<header id="mainHeader">
+				<!-- Header Logo -->
+				<div id="headerLogo"><object data="images/ComIcon_logo.svg" type="text/svg"></object></div>
+
+				<!-- Main Navigation -->
+				<nav id="mainNav">
+					<h2 class="hidden">Main Navigation</h2>
+					<ul>
+						<li><a href="#">Marvel</a></li>
+						<li><a href="#">DC</a></li>
+						<li><a href="#">Other</a></li>
+					</ul>
+				</nav> <!-- End mainNav -->
+			</header> <!-- End mainHeader -->
+
+			<!-- Icon description -->
+			<section id="iconDescription">
+				<!-- Heading -->
+				<h2>Marvel Icons</h2>
+
+				<!-- Description -->
+				<p>Circular icons of some popular Marvel characters. Current characters include: Daredevil, Deadpool, Dr. Doom, Dr. Strange, Iron Fist, Iron Man, The Punisher, Spider-Man, Thor, and Wolverine. Click on any icon for more information.</p>
+			</section> <!-- End iconDescription -->
+
+			<!-- Icons -->
+			<section id="icons">
+				<h2 class="hidden">Icons</h2>
+				<!-- Daredevil Icon -->
+				<div class="iconContainer">
+					<div class="iconWrapper">
+						<object data="images/daredevil_icon.svg" type="text/svg"></object>
+					</div> <!-- End iconWrapper -->
+				</div> <!-- End iconContainer -->
+
+				<!-- Deadpool Icon -->
+				<div class="iconContainer">
+					<div class="iconWrapper">
+						<object data="images/deadpool_icon.svg" type="text/svg"></object>
+					</div> <!-- End iconWrapper -->
+				</div> <!-- End iconContainer -->
+
+				<!-- Dr. Doom Icon -->
+				<div class="iconContainer">
+					<div class="iconWrapper">
+						<object data="images/dr_doom_icon.svg" type="text/svg"></object>
+					</div> <!-- End iconWrapper -->
+				</div> <!-- End iconContainer -->
+
+				<!-- Dr. Strange Icon -->
+				<div class="iconContainer">
+					<div class="iconWrapper">
+						<object data="images/dr_strange_icon.svg" type="text/svg"></object>
+					</div> <!-- End iconWrapper -->
+				</div> <!-- End iconContainer -->
+
+				<!-- Iron Fist Icon -->
+				<div class="iconContainer">
+					<div class="iconWrapper">
+						<object data="images/iron_fist_icon.svg" type="text/svg"></object>
+					</div> <!-- End iconWrapper -->
+				</div> <!-- End iconContainer -->
+
+				<!-- Iron Man Icon -->
+				<div class="iconContainer">
+					<div class="iconWrapper">
+						<object data="images/iron_man_icon.svg" type="text/svg"></object>
+					</div> <!-- End iconWrapper -->
+				</div> <!-- End iconContainer -->
+
+				<!-- The Punisher Icon -->
+				<div class="iconContainer">
+					<div class="iconWrapper">
+						<object data="images/punisher_icon.svg" type="text/svg"></object>
+					</div> <!-- End iconWrapper -->
+				</div> <!-- End iconContainer -->
+
+				<!-- Spider-Man Icon -->
+				<div class="iconContainer">
+					<div class="iconWrapper">
+						<object data="images/spider-man_icon.svg" type="text/svg"></object>
+					</div> <!-- End iconWrapper -->
+				</div> <!-- End iconContainer -->
+
+				<!-- Thor Icon -->
+				<div class="iconContainer">
+					<div class="iconWrapper">
+						<object data="images/thor_icon.svg" type="text/svg"></object>
+					</div> <!-- End iconWrapper -->
+				</div> <!-- End iconContainer -->
+
+				<!-- Wolverine Icon -->
+				<div class="iconContainer">
+					<div class="iconWrapper">
+						<object data="images/wolverine_icon.svg" type="text/svg"></object>
+					</div> <!-- End iconWrapper -->
+				</div> <!-- End iconContainer -->
+			</section> <!-- End icons -->
+
+			<!-- Footer -->
+			<footer id="mainFooter">
+				<!-- Copyright info -->
+				<p>ComIcon. ©2019. All Rights Reserved.</p>
+			</footer> <!-- End mainFooter -->
+
+		</div> <!-- End container -->
 
 		<script src="js/main.js"></script>
 	</body>
