Wrote necessary CSS and edited HTML and other files where needed

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 		<meta charset="utf-8">
 		<title>ComIcon</title>
 		<link href="css/reset.css" rel="stylesheet" type="text/css">
+		<link href="https://fonts.googleapis.com/css?family=Staatliches" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 		<link href="css/main.css" rel="stylesheet" type="text/css">
 	</head>
 
@@ -24,6 +26,7 @@
 					<ul>
 						<li><a href="#">Marvel</a></li>
 						<li><a href="#">DC</a></li>
+						<li><a href="#">Graphic Novels</a></li>
 						<li><a href="#">Other</a></li>
 					</ul>
 				</nav> <!-- End mainNav -->
@@ -44,70 +47,70 @@
 				<!-- Daredevil Icon -->
 				<div class="iconContainer">
 					<div class="iconWrapper">
-						<object data="images/daredevil_icon.svg" type="text/svg"></object>
+						<object data="images/daredevil_icon.svg" type="text/svg" class="marvelIcon"></object>
 					</div> <!-- End iconWrapper -->
 				</div> <!-- End iconContainer -->
 
 				<!-- Deadpool Icon -->
 				<div class="iconContainer">
 					<div class="iconWrapper">
-						<object data="images/deadpool_icon.svg" type="text/svg"></object>
+						<object data="images/deadpool_icon.svg" type="text/svg" class="marvelIcon"></object>
 					</div> <!-- End iconWrapper -->
 				</div> <!-- End iconContainer -->
 
 				<!-- Dr. Doom Icon -->
 				<div class="iconContainer">
 					<div class="iconWrapper">
-						<object data="images/dr_doom_icon.svg" type="text/svg"></object>
+						<object data="images/dr_doom_icon.svg" type="text/svg" class="marvelIcon"></object>
 					</div> <!-- End iconWrapper -->
 				</div> <!-- End iconContainer -->
 
 				<!-- Dr. Strange Icon -->
 				<div class="iconContainer">
 					<div class="iconWrapper">
-						<object data="images/dr_strange_icon.svg" type="text/svg"></object>
+						<object data="images/dr_strange_icon.svg" type="text/svg" class="marvelIcon"></object>
 					</div> <!-- End iconWrapper -->
 				</div> <!-- End iconContainer -->
 
 				<!-- Iron Fist Icon -->
 				<div class="iconContainer">
 					<div class="iconWrapper">
-						<object data="images/iron_fist_icon.svg" type="text/svg"></object>
+						<object data="images/iron_fist_icon.svg" type="text/svg" class="marvelIcon"></object>
 					</div> <!-- End iconWrapper -->
 				</div> <!-- End iconContainer -->
 
 				<!-- Iron Man Icon -->
 				<div class="iconContainer">
 					<div class="iconWrapper">
-						<object data="images/iron_man_icon.svg" type="text/svg"></object>
+						<object data="images/iron_man_icon.svg" type="text/svg" class="marvelIcon"></object>
 					</div> <!-- End iconWrapper -->
 				</div> <!-- End iconContainer -->
 
 				<!-- The Punisher Icon -->
 				<div class="iconContainer">
 					<div class="iconWrapper">
-						<object data="images/punisher_icon.svg" type="text/svg"></object>
+						<object data="images/punisher_icon.svg" type="text/svg" class="marvelIcon"></object>
 					</div> <!-- End iconWrapper -->
 				</div> <!-- End iconContainer -->
 
 				<!-- Spider-Man Icon -->
 				<div class="iconContainer">
 					<div class="iconWrapper">
-						<object data="images/spider-man_icon.svg" type="text/svg"></object>
+						<object data="images/spider-man_icon.svg" type="text/svg" class="marvelIcon"></object>
 					</div> <!-- End iconWrapper -->
 				</div> <!-- End iconContainer -->
 
 				<!-- Thor Icon -->
 				<div class="iconContainer">
 					<div class="iconWrapper">
-						<object data="images/thor_icon.svg" type="text/svg"></object>
+						<object data="images/thor_icon.svg" type="text/svg" class="marvelIcon"></object>
 					</div> <!-- End iconWrapper -->
 				</div> <!-- End iconContainer -->
 
 				<!-- Wolverine Icon -->
 				<div class="iconContainer">
 					<div class="iconWrapper">
-						<object data="images/wolverine_icon.svg" type="text/svg"></object>
+						<object data="images/wolverine_icon.svg" type="text/svg" class="marvelIcon"></object>
 					</div> <!-- End iconWrapper -->
 				</div> <!-- End iconContainer -->
 			</section> <!-- End icons -->
