Wrote js code and edited any files that needed to be edited for it to work

--- a/index.html
+++ b/index.html
@@ -47,72 +47,212 @@
 				<!-- Daredevil Icon -->
 				<div class="iconContainer">
 					<div class="iconWrapper">
-						<object data="images/daredevil_icon.svg" type="text/svg" class="marvelIcon"></object>
+						<img src="images/daredevil_icon.svg" alt="Daredevil Icon" class="marvelIcon" id="daredevil">
 					</div> <!-- End iconWrapper -->
 				</div> <!-- End iconContainer -->
+
+				<!-- Daredevil Modal -->
+				<div id="daredevilModal" class="modal">
+				  <!-- Modal Content -->
+				  <div class="modalContent">
+				    <!-- Heading -->
+				    <h3>Daredevil</h3>
+
+				    <!-- Content -->
+				    <p>Daredevil, also known as "Man Without Fear" and the "Devil of Hell's Kitchen", was created by writer-editor Stan Lee and artist Bill Everett and first appeared in Daredevil #1 (April 1964). His abilities include Superhuman senses, echolocative radar sense, skilled acrobat and hand-to-hand combatant, and utilization of a specially-designed club.</p>
+
+				    <p><span class="italic">Click anywhere outside this box to close.</span></p>
+				  </div> <!-- End modalContent -->
+				</div> <!-- End daredevilModal -->
 
 				<!-- Deadpool Icon -->
 				<div class="iconContainer">
 					<div class="iconWrapper">
-						<object data="images/deadpool_icon.svg" type="text/svg" class="marvelIcon"></object>
+						<img src="images/deadpool_icon.svg" alt="Deadpool Icon" class="marvelIcon" id="deadpool">
 					</div> <!-- End iconWrapper -->
 				</div> <!-- End iconContainer -->
+
+				<!-- Deadpool Modal -->
+				<div id="deadpoolModal" class="modal">
+				  <!-- Modal Content -->
+				  <div class="modalContent">
+				    <!-- Heading -->
+				    <h3>Deadpool</h3>
+
+				    <!-- Content -->
+				    <p>Deadpool was created by writer Fabian Nicieza and artist/writer Rob Liefeld and first appeared in The New Mutants #98 (February 1991). His abilities include a regenerative healing factor, extended longevity, skilled marksmanship, swordsmanship, and hand-to-hand combat, and fourth wall awareness. He also uses a magic satchel and owns devices granting teleportation and holographic disguise.</p>
+
+				    <p><span class="italic">Click anywhere outside this box to close.</span></p>
+				  </div> <!-- End modalContent -->
+				</div> <!-- End deadpoolModal -->
 
 				<!-- Dr. Doom Icon -->
 				<div class="iconContainer">
 					<div class="iconWrapper">
-						<object data="images/dr_doom_icon.svg" type="text/svg" class="marvelIcon"></object>
+						<img src="images/dr_doom_icon.svg" alt="Dr. Doom Icon" class="marvelIcon" id="dr_doom">
 					</div> <!-- End iconWrapper -->
 				</div> <!-- End iconContainer -->
+
+				<!-- Dr. Doom Modal -->
+				<div id="drDoomModal" class="modal">
+				  <!-- Modal Content -->
+				  <div class="modalContent">
+				    <!-- Heading -->
+				    <h3>Dr. Doom</h3>
+
+				    <!-- Content -->
+				    <p>Dr. Doom was created by writer-editor Stan Lee and artist/co-plotter Jack Kirby and first appeared in The Fantastic Four #5 (July 1962). His abilities include genius-level intellect, technopathy, energy absorption and projection, mind transference, and demonic summoning via dark mysticism and sorcery. His armor grants him superhuman strength and durability, gauntlet lasers and force blasts, flight via rocket boots, forcefield generation, and various high-tech weapons and gadgets</p>
+
+				    <p><span class="italic">Click anywhere outside this box to close.</span></p>
+				  </div> <!-- End modalContent -->
+				</div> <!-- End drDoomModal -->
 
 				<!-- Dr. Strange Icon -->
 				<div class="iconContainer">
 					<div class="iconWrapper">
-						<object data="images/dr_strange_icon.svg" type="text/svg" class="marvelIcon"></object>
+						<img src="images/dr_strange_icon.svg" alt="Dr. Strange Icon" class="marvelIcon" id="dr_strange">
 					</div> <!-- End iconWrapper -->
 				</div> <!-- End iconContainer -->
+
+				<!-- Dr. Strange Modal -->
+				<div id="drStrangeModal" class="modal">
+				  <!-- Modal Content -->
+				  <div class="modalContent">
+				    <!-- Heading -->
+				    <h3>Dr. Strange</h3>
+
+				    <!-- Content -->
+				    <p>Dr. Strange was created by artist Steve Ditko and writer Stan Lee and first appeared in Strange Tales #110 (July 1963). His abilities include mastery of magic, genius-level intelect, martial arts, and is a trained physician. He also utilizes mystical artifacts, such as the cloak of Levitation and the Eye of Agamotto.</p>
+
+				    <p><span class="italic">Click anywhere outside this box to close.</span></p>
+				  </div> <!-- End modalContent -->
+				</div> <!-- End drStrangeModal -->
 
 				<!-- Iron Fist Icon -->
 				<div class="iconContainer">
 					<div class="iconWrapper">
-						<object data="images/iron_fist_icon.svg" type="text/svg" class="marvelIcon"></object>
+						<img src="images/iron_fist_icon.svg" alt="Iron Fist Icon" class="marvelIcon" id="iron_fist">
 					</div> <!-- End iconWrapper -->
 				</div> <!-- End iconContainer -->
+
+				<!-- Iron Fist Modal -->
+				<div id="ironFistModal" class="modal">
+				  <!-- Modal Content -->
+				  <div class="modalContent">
+				    <!-- Heading -->
+				    <h3>Iron Fist</h3>
+
+				    <!-- Content -->
+				    <p>Iron Fist was created by Roy Thomas and Gil Kane and first appeared in Marvel Premiere #15 (May 1974). His ability is the mastery of numerous martial arts. He also utilizes concentrated chi in his fist called the "Iron Fist," a mystical weapon</p>
+
+				    <p><span class="italic">Click anywhere outside this box to close.</span></p>
+				  </div> <!-- End modalContent -->
+				</div> <!-- End ironFistModal -->
 
 				<!-- Iron Man Icon -->
 				<div class="iconContainer">
 					<div class="iconWrapper">
-						<object data="images/iron_man_icon.svg" type="text/svg" class="marvelIcon"></object>
+						<img src="images/iron_man_icon.svg" alt="Iron Man Icon" class="marvelIcon" id="iron_man">
 					</div> <!-- End iconWrapper -->
 				</div> <!-- End iconContainer -->
+
+				<!-- Iron Man Modal -->
+				<div id="ironManModal" class="modal">
+				  <!-- Modal Content -->
+				  <div class="modalContent">
+				    <!-- Heading -->
+				    <h3>Iron Man</h3>
+
+				    <!-- Content -->
+				    <p>Iron Man was co-created by writer and editor Stan Lee, developed by scripter Larry Lieber, and designed by artists Don Heck and Jack Kirby and first appeared in Tales of Suspense #39 (March 1963). His abilities include genius-level intellect, and proficiency in science and engineering. His powered suits grant him superhuman strength and durability, supersonic flight, energy repulsors and missile projection, and regenerative life support.</p>
+
+				    <p><span class="italic">Click anywhere outside this box to close.</span></p>
+				  </div> <!-- End modalContent -->
+				</div> <!-- End ironManModal -->
 
 				<!-- The Punisher Icon -->
 				<div class="iconContainer">
 					<div class="iconWrapper">
-						<object data="images/punisher_icon.svg" type="text/svg" class="marvelIcon"></object>
+						<img src="images/punisher_icon.svg" alt="The Punisher Icon" class="marvelIcon" id="punisher">
 					</div> <!-- End iconWrapper -->
 				</div> <!-- End iconContainer -->
+
+				<!-- The Punisher Modal -->
+				<div id="punisherModal" class="modal">
+				  <!-- Modal Content -->
+				  <div class="modalContent">
+				    <!-- Heading -->
+				    <h3>The Punisher</h3>
+
+				    <!-- Content -->
+				    <p>The Punisher was created by writer Gerry Conway and artists John Romita Sr. and Ross Andru, with publisher Stan Lee green-lighting the name and first appeared in The Amazing Spider-Man #129 (February 1974). His abilities include proficiency in guerrilla and military tactics, close quarters combat, infiltration, marksmanship, and demolitions and special operations training.</p>
+
+				    <p><span class="italic">Click anywhere outside this box to close.</span></p>
+				  </div> <!-- End modalContent -->
+				</div> <!-- End punisherModal -->
 
 				<!-- Spider-Man Icon -->
 				<div class="iconContainer">
 					<div class="iconWrapper">
-						<object data="images/spider-man_icon.svg" type="text/svg" class="marvelIcon"></object>
+						<img src="images/spider-man_icon.svg" alt="Spider-Man Icon" class="marvelIcon" id="spider-man">
 					</div> <!-- End iconWrapper -->
 				</div> <!-- End iconContainer -->
+
+				<!-- Spider-Man Modal -->
+				<div id="spider-manModal" class="modal">
+				  <!-- Modal Content -->
+				  <div class="modalContent">
+				    <!-- Heading -->
+				    <h3>Spider-Man</h3>
+
+				    <!-- Content -->
+				    <p>Spider-Man was created by writer-editor Stan Lee and writer-artist Steve Ditko and first appeared Amazing Fantasy #15 (August 1962). His abilities include genius-level intellect, proficiency in science and inventing, superhuman strength, speed, agility, stamina, reflexes, coordination, balance, and endurance, precognitive spider-sense, and the ability to cling to most solid surfaces. He also utilizes wrist web-shooters to shoot spiderweb material.</p>
+
+				    <p><span class="italic">Click anywhere outside this box to close.</span></p>
+				  </div> <!-- End modalContent -->
+				</div> <!-- End spider-manModal -->
 
 				<!-- Thor Icon -->
 				<div class="iconContainer">
 					<div class="iconWrapper">
-						<object data="images/thor_icon.svg" type="text/svg" class="marvelIcon"></object>
+						<img src="images/thor_icon.svg" alt="Thor Icon" class="marvelIcon" id="thor">
 					</div> <!-- End iconWrapper -->
 				</div> <!-- End iconContainer -->
+
+				<!-- Thor Modal -->
+				<div id="thorModal" class="modal">
+				  <!-- Modal Content -->
+				  <div class="modalContent">
+				    <!-- Heading -->
+				    <h3>Thor</h3>
+
+				    <!-- Content -->
+				    <p>Thor was created by editor-plotter Stan Lee, scripter Larry Lieber, and penciller-plotter Jack Kirby and first appeared in Journey into Mystery #83 (August 1962). His abilities include superhuman strength, speed, durability and longevity. He also wields a mystical hammer called Mjolnir which grants him dimensional transportation, electric manipulation, flight, and weather manipulation.</p>
+
+				    <p><span class="italic">Click anywhere outside this box to close.</span></p>
+				  </div> <!-- End modalContent -->
+				</div> <!-- End thorModal -->
 
 				<!-- Wolverine Icon -->
 				<div class="iconContainer">
 					<div class="iconWrapper">
-						<object data="images/wolverine_icon.svg" type="text/svg" class="marvelIcon"></object>
+						<img src="images/wolverine_icon.svg" alt="Wolverine Icon" class="marvelIcon" id="wolverine">
 					</div> <!-- End iconWrapper -->
 				</div> <!-- End iconContainer -->
+
+				<!-- Wolverine Modal -->
+				<div id="wolverineModal" class="modal">
+				  <!-- Modal Content -->
+				  <div class="modalContent">
+				    <!-- Heading -->
+				    <h3>Wolverine</h3>
+
+				    <!-- Content -->
+				    <p>Wolverine was created by Marvel editor-in-chief Roy Thomas, writer Len Wein, and Marvel art director John Romita Sr. Romita and first appeared in The Incredible Hulk #180 (October 1974). His abilities include superhuman senses, agility, reflexes, and animal-like attributes, extended longevity via regenerative healing factor, an adamantium-plated skeleton, retractable bone claws, and skills in hand-to-hand combat.</p>
+
+				    <p><span class="italic">Click anywhere outside this box to close.</span></p>
+				  </div> <!-- End modalContent -->
+				</div> <!-- End wolverineModal -->
 			</section> <!-- End icons -->
 
 			<!-- Footer -->
